--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
   {% include head.html %}
 
@@ -7,14 +7,11 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+    <section class="main-content">
+      {{ content }}
+      {% include footer.html %}
+    </section>
 
-    {% include footer.html %}
-
+  
   </body>
-
 </html>
