--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <section class="page-header">
-  <h1 class="project-name">Jskopek.GitHub.io</h1>
-  <h2 class="project-tagline">Personal website</h2>
+  <h1 class="project-name"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+  <h2 class="project-tagline">{{ site.description }}</h2>
 
   {% comment %}
   {% for my_page in site.pages %}
