More tweaks to style of vancouver island post

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,14 +52,8 @@
         //"layout",
         // "syntax-highlighting"
         "normalize",
-        "video",
-        "posts",
         "github-light",
-        "custom-style"
+        "custom-style",
+        "video",
+        "posts"
 ;
-
-p {
-    max-width: 600px;
-    margin: 0em auto;
-    padding: 5em 0;
-}
