--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,17 +1,54 @@
+$carbon-ark: rgb(255, 250, 244);  // Color of Carbon Ark (http://planetpixelemporium.com/tutorialpages/light.html)
+$high-noon-sun: rgb(255, 255, 251);  // Color of High Noon Sun (http://planetpixelemporium.com/tutorialpages/light.html)
+$header: #4183c4;
+
+.page-header,
 .main-content {
-    max-width: 90% !important;
-    padding: 2rem 0 !important;
+    max-width: 90%;
+    padding: 2rem 0;
+    margin: 0 auto;
 
     h1, h2, h3, h4, h5, h6 {
         text-align: center;
-        color: #A81C07 !important;
+        color: $header;
     }
 }
 .page-header {
-    background-image: linear-gradient(120deg, #A81C07, #882D17) !important;
+    //background-image: linear-gradient(120deg, #A81C07, #882D17) !important;
+    background: transparent;
+    padding: 2rem 0 0 0;
+    
+    .project-name {
+        text-align: right;
+
+        a {
+            color: #000;
+            text-decoration: none;
+            font-size: 1rem;
+            background:  linear-gradient(120deg, #4183c4, #1d3e81);
+            border-radius: 10px;
+            padding: 0.6rem 2em;
+            color: $high-noon-sun;
+            
+        }
+    }
+    .project-tagline {
+        display: none;
+    }
 }
 body {
-    //background-color: rgb(255, 250, 244);  // Color of Carbon Ark (http://planetpixelemporium.com/tutorialpages/light.html)
-    background-color: rgb(255, 255, 251);  // Color of High Noon Sun (http://planetpixelemporium.com/tutorialpages/light.html)
+    //background-color: rgb(255, 250, 244);  
+    background-color: $high-noon-sun;  // Color of High Noon Sun (http://planetpixelemporium.com/tutorialpages/light.html)
+}
+p {
+    max-width: 600px;
+    margin: 0em auto;
+    padding: 0;
+}
+video {
+    margin: 4em 0;
+}
+a {
+    text-decoration: underline;
 }
 
