--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,9 +27,9 @@
   <meta property="og:video:width" content="{{ page.video-width }}" />
   <meta property="og:video:height" content="{{ page.video-height }}" />
   <meta property="og:video:type" content="video/mp4" />
-  <meta property="twitter:player" content="{{ page.video | prepend: site.baseurl | prepend: site.url }}" />
-  <meta property="twitter:player:width" content="{{ page.video-width }}" />
-  <meta property="twitter:player:height" content="{{ page.video-height }}" />
+  <meta name="twitter:player" content="{{ page.video | prepend: site.baseurl | prepend: site.url }}" />
+  <meta name="twitter:player:width" content="{{ page.video-width }}" />
+  <meta name="twitter:player:height" content="{{ page.video-height }}" />
   {% endif %}
   <meta name="twitter:card" content="{% if page.video %}player{% else %}summary{% endif %}" />
   <meta name="twitter:site" content="@jmskopek" />
