--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <section class="main-content">
-      {{ content }}
-      {% include footer.html %}
-    </section>
-
-  
-  </body>
+<html>
+    {% include head.html %}
+    <body>
+        <div class="homepage-gradient one" style="opacity: 1.0;"></div>
+        <div class="homepage-gradient two" style="opacity: 0.0;"></div>
+        <div id="content">
+            {{ content }}
+            {% include footer.html %}
+        </div>
+    </body>
 </html>
