--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,7 @@
         "normalize",
         "github-light",
         "custom-style",
+        "homepage-content",
         "video",
         "toggle-switch",
         "posts"
