Tweaks to writing summary page

--- a/_includes/postSummary.html
+++ b/_includes/postSummary.html
@@ -1,6 +1,6 @@
-<li>
+<li class="post-summary">
     <a href="{{ include.url }}">{{ include.title }}</a>
     <span class="date">{{ include.date }}</span>
-    <div>{{ include.summary }}</div>
+    <p>{{ include.summary }}</p>
 </li>
 
