--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -99,3 +99,9 @@ and (max-device-width : 667px) {
         display: none;
     }
 }
+
+
+// new - may 8 2018
+.post-summary {
+    margin-bottom: 1em;
+}
