--- a/_layouts/timelapses.html
+++ b/_layouts/timelapses.html
@@ -2,22 +2,15 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="{{ "/css/front-page.css" | prepend: site.baseurl }}">
-
-<div id="content">
-    <a href="/timelapses">Back</a>
-    <div style="padding:66.8% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/{{ page.vimeoId }}?autoplay=1&color=ff0179&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-
-    <p>{{ page.summary }}</p>
-
-    <div class="nav">
-        {% if page.previous.url %}
-        <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-        {% endif %}
-        {% if page.next.url %}
-        <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-        {% endif %}
-    </div>
+<div class="page-header">
+    <h2><i class="fa fa-timelapses"></i> <a href="/timelapses">timelapses</a></h2>
+    <a href="/"><i class="fa fa-home"></i> home</a></p>
 </div>
 
-<script type="text/javascript" src="{{ "/assets/front-page.js" | prepend: site.baseurl }}"></script>
+<div id="content">
+    {% if page.vimeoId %}
+        {% include vimeo-embed.html %}
+    {% else %}
+        {{ content }}
+    {% endif %}
+</div>
