--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,13 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<link rel="stylesheet" href="{{ "/css/posts.css" | prepend: site.baseurl }}">
 
-  <!-- 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
-  -->
+<div class="page-header">
+    <h2><i class="fa fa-writing"></i> <a href="/posts">writing</a></h2>
+    <a href="/"><i class="fa fa-home"></i> home</a></p>
+</div>
 
-  <div class="post-content" itemprop="articleBody">
+<div id="content">
     {{ content }}
-  </div>
-
-</article>
-
+</div>
