--- a/css/posts.scss
+++ b/css/posts.scss
@@ -1,3 +1,7 @@
+---
+# Posts
+---
+
 $carbon-ark: rgb(255, 250, 244);  // Color of Carbon Ark (http://planetpixelemporium.com/tutorialpages/light.html)
 $high-noon-sun: rgb(255, 255, 251);  // Color of High Noon Sun (http://planetpixelemporium.com/tutorialpages/light.html)
 $header: #4183c4;
