--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,15 @@
 ---
 layout: default
 ---
-<link rel="stylesheet" href="{{ "/css/posts.css" | prepend: site.baseurl }}">
+<!-- <link rel="stylesheet" href="{{ "/css/posts.css" | prepend: site.baseurl }}"> -->
 
 <div class="page-header">
-    <h2><i class="fa fa-writing"></i> <a href="/posts">writing</a></h2>
-    <a href="/"><i class="fa fa-home"></i> home</a></p>
+    <div>
+        <h1><i class="fa fa-writing"></i> <a href="/posts">writing</a></h1>
+    </div>
+    <div>
+        <i class="fa fa-home"></i> <a href="/">home</a></p>
+    </div>
 </div>
 
 <div id="content">
