--- a/_includes/postSummary.html
+++ b/_includes/postSummary.html
@@ -1,6 +1,6 @@
 <li class="post-summary">
-    <a href="{{ include.url }}">{{ include.title }}</a>
-    <span class="date">{{ include.date }}</span>
-    <p>{{ include.summary }}</p>
+    <i class="fa fa-medium"></i> <a href="{{ include.url }}">{{ include.title }}</a>
+    <p class="text-light">{{ include.summary }}</p>
+    <div class="date text-light">{{ include.date }}</div>
 </li>
 
