--- a/_layouts/drones.html
+++ b/_layouts/drones.html
@@ -3,8 +3,12 @@ layout: default
 ---
 
 <div class="page-header">
-    <h2><i class="fa fa-drone"></i> <a href="/drones">drones</a></h2>
-    <a href="/"><i class="fa fa-home"></i> home</a></p>
+    <div>
+        <h2><i class="fa fa-drone"></i> <a href="/drones">drones</a></h2>
+    </div>
+    <div>
+        <a href="/"><i class="fa fa-home"></i> home</a></p>
+    </div>
 </div>
 
 <div id="content">
