--- a/_includes/vimeo-embed.html
+++ b/_includes/vimeo-embed.html
@@ -1,4 +1,25 @@
-<div style="padding:66.8% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/{{ page.vimeoId }}?autoplay=1&color=ff0179&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<!-- <div style="padding:66.8% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/{{ page.vimeoId }}?autoplay=1&color=ff0179&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> -->
+
+<div id="vimeo-container"></div>
+<script src="https://player.vimeo.com/api/player.js"></script>
+<script>
+var options = {
+    id: {{ page.vimeoId }},
+    background: false,
+    muted: true,
+    quality: '4k',
+    responsive: 1
+};
+
+var player = new Vimeo.Player('vimeo-container', options);
+
+player.setVolume(0);
+
+player.on('play', function() {
+    console.log('played the video!');
+});
+player.play();
+</script>
 
 <p>{{ page.summary }}</p>
 
