--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,11 @@
 ---
 layout: default
 ---
-<!-- <link rel="stylesheet" href="{{ "/css/posts.css" | prepend: site.baseurl }}"> -->
-
-<div class="page-header">
-    <div>
-        <h1><i class="fa fa-writing"></i> <a href="/posts">writing</a></h1>
+<div class="post">
+    <div class="mb-2">
+        <h1>{{ page.title }}</h1>
+        <div class="date text-secondary">{{ page.date|date_to_long_string }}</div>
     </div>
-    <div>
-        <i class="fa fa-home"></i> <a href="/">home</a></p>
-    </div>
-</div>
-
-<div id="content">
+    
     {{ content }}
 </div>
