--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
                 <div class="col col-md-2 nav-col">
                     <h1 class="main-title"><a href="/">Jean Marc Skopek</a></h1>
                     <ul class="nav flex-column main-nav">
-                        <li class="nav-item nav-link {% if page.url contains '/writing' %}active{% endif %}"><a href="/writing/" class="nav-link">Writing</a></li>
+                        <li class="nav-item nav-link {% if page.url contains '/blah' %}active{% endif %}"><a href="/blah/" class="nav-link">Writing</a></li>
                         <li class="nav-item nav-link {% if page.url contains '/timelapses' %}active{% endif %}"><a href="/timelapses/" class="nav-link">Timelapses</a></li>
                         <li class="nav-item nav-link {% if page.url contains '/drones' %}active{% endif %}"><a href="/drones/" class="nav-link">Drones</a></li>
                         {% comment %}<li class="nav-item nav-link {% if page.url contains '/photography' %}active{% endif %}"><a href="/photography/" class="nav-link">Photography</a></li>{% endcomment %}
