Additional tweaks to design

--- a/_includes/postSummary.html
+++ b/_includes/postSummary.html
@@ -1,5 +1,5 @@
 <div class="post-summary">
-    <i class="fa fa-medium"></i> <a href="{{ include.url }}" class="text-primary">{{ include.title }}</a>
+    <a href="{{ include.url }}" class="text-primary">{{ include.title }}</a>
     <div class="date text-secondary">{{ include.date|date_to_long_string }}</div>
     <p class="text-secondary">{{ include.summary }}</p>
 </div>
