--- a/css/main.scss
+++ b/css/main.scss
@@ -19,16 +19,14 @@ body.dark {
     background-color: #000;
     h1, h2, h3, h4, h5, p { color: #fff; }
     .text-secondary { color: #aaa !important; }
-    a { color: #aaa; }
+    a { color: #bbb; }
 
     .main-nav {
         li a {
             color: #fff;
             border-bottom: 2px solid #eee;
         }
-        li a:hover {
-            border-bottom: 2px solid #444;
-        }
+        li a:hover,
         li.active a {
             color: #888;
             border-bottom: 2px solid #444;
@@ -37,9 +35,7 @@ body.dark {
     .main-title {
         a {
             color: #fff;
-        }
-        a:hover {
-            border-bottom: 2px solid #eee;
+            background-image: url(/assets/home-logo.png);
         }
     }
 }
@@ -54,17 +50,33 @@ body.light {
     position: absolute;
     bottom: 0;
     right: 0;
-    max-width: 50%;
+    max-width: 45%;
     z-index: 1;
 }
 .home-text {
-    font-size: 2.5em;
-    line-height: 1.1em;
+    font-size: 2em;
+    line-height: 1.3em;
     margin-right: 50%;
     margin-top: 4em;
     
     p {
-        margin-bottom: 1em;
+        margin-bottom: .7em;
+    }
+    a, a:hover { text-decoration: none; }
+
+    a {
+        color: #eee;
+        transition: color .4s;
+    }
+    a:hover {
+        color: #888;
+    }
+    a span {
+        border-bottom: 2px solid #bbb;
+        transition: border-bottom .3s;
+    }
+    a:hover span {
+        border-bottom: 2px solid #444;
     }
 }
 .main-header {
@@ -79,22 +91,29 @@ body.light {
         font-size: 1.5em;
     }
     li a {
-        color: #888;
-        border-bottom: 2px solid #eee;
-    }
-    li a:hover {
-        text-decoration: none;
-        border-bottom: 2px solid #444;
-    }
-    li.active a {
         color: #444;
         border-bottom: 2px solid #444;
+        transition: border-bottom .3s, color .4s;
+    }
+    li a:hover,
+    li.active a {
+        text-decoration: none;
+        color: #888;
+        border-bottom: 2px solid #eee;
     }
 }
 .main-title {
     z-index: 2;
     a {
         color: #000;
+
+        display: block;
+        background-image: url(/assets/home-logo-white.png);
+        background-repeat: no-repeat;
+        text-indent: -5000px;
+        background-size: cover;
+        width: 264px;
+        height: 72px;
     }
     a:hover {
         text-decoration: none;
@@ -102,6 +121,12 @@ body.light {
 }
 .container {
     margin: 3em auto;
+}
+.gallery-tiled {
+    display: flex;
+    figure {
+        margin-right: 1rem;
+    }
 }
 
 //@import './bootstrap-4.1.3/scss/bootstrap';
