--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,8 @@
 @import "./bootstrap-4.1.3/scss/tables";
 @import "./bootstrap-4.1.3/scss/utilities";
 
+@import 'micromodal';
+
 body.dark {
     background-color: #000;
     h1, h2, h3, h4, h5, p { color: #fff; }
