--- a/css/main.scss
+++ b/css/main.scss
@@ -176,3 +176,23 @@ body.light {
 //@import "./bootstrap-4.1.3/scss/print";
 
 
+
+.modal__container {
+    max-width: 94%;
+    padding: 0;
+    background: #000;
+
+    video {
+        max-width: 100%;
+    }
+}
+
+.timelapse-item {
+    img {
+        max-width: 100%;
+        border-radius: 4px;
+    }
+    .timelapse-summary {
+        text-align: center;
+    }
+}
